feat: organize lib code into folders and create separated definitions for the utilities files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,12 @@ endif()
 # |--------------------------------------------------------------------------|
 
 # ------------------------------- library target -----------------------------
-add_library(industrialboar STATIC src/lib/__placeholder__.cpp)
+add_library(industrialboar STATIC
+    src/lib/utils/assert.hpp
+    src/lib/utils/assert.cpp
+    src/lib/utils/log.hpp
+    src/lib/utils/log.cpp
+)
 target_include_directories(industrialboar INTERFACE src/lib)
 target_link_libraries(industrialboar PUBLIC fmt::fmt glm::glm SDL2 SDL2_image)
 set_compile_flags(industrialboar)
