--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,9 +2,7 @@ name: Auto Format
 
 on:
   push:
-    branches:  "main"
   pull_request:
-    branches: "main"
   workflow_dispatch:
 
 jobs:
@@ -19,16 +17,4 @@ jobs:
       run: git status
     - name: check modifications
       id: git-check
-      run: echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
-    - name: commit
-      if: steps.git-check.outputs.modified == 'true'
-      run: |
-        git config user.name "Roboar Formatter"
-        git config user.email "boar@boar.com"
-        git add src
-        git commit -m "Auto: Format script"
-        git push origin main
-        
-        
-      
-
+      run: if git diff-index --quiet HEAD --; then exit 0; else exit 1; fi
